ingress-nginx/test/test-nginx-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: dockerproxy.net/library/nginx:1.23.1
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: web
spec:
  #type: NodePort
  #type: LoadBalancer
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
  selector:
    app: web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
spec:
  ingressClassName: nginx
  rules:
  - host: ngdemo.mieken.cn  # 将域名映射到 web 服务
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web
            port:
              number: 80
