ingress-nginx/test/test-nginx-3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: dockerproxy.net/library/nginx:1.23.1
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: web
spec:
  #type: NodePort
  #type: LoadBalancer
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-https
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ngdemo.mieken.cn
    secretName: ngdemo-mieken-cn
  rules:
  - host: ngdemo.mieken.cn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80  # 必须与 Service 端口一致
