ingress-nginx/test/test-nginx-4.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: dockerproxy.net/library/nginx:1.23.1
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: web
spec:
  #type: NodePort
  #type: LoadBalancer
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  annotations:
    # 示例1：设置代理超时参数
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    # 示例2：设置客户端上传文件大小
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    # 示例3：自定义规则
    nginx.ingress.kubernetes.io/server-snippet: |
      if ($http_user_agent ~* '(Android|iPhone)') {
      rewrite ^/(.*) http://m.baidu.com break;
      }
spec:
  ingressClassName: nginx
  rules:
  - host: ngdemo.mieken.cn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80  # 必须与 Service 端口一致
