ingress-nginx/test/test-nginx-5.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: dockerproxy.net/library/nginx:1.23.1
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: web
spec:
  #type: NodePort
  type: LoadBalancer
  #type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  annotations:
    # 代理超时参数（保留）
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    # 客户端上传文件大小限制（保留）
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ngdemo.mieken.cn
    secretName: ngdemo-mieken-cn
  rules:
  - host: ngdemo.mieken.cn
    http:
      paths:
      - path: /mobile
        pathType: Prefix
        backend:
          service:
            name: mobile-service  # 单独为移动端部署的后端服务
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
